Renaming bone in pose mode doesn't redraw the viewport names #76801

Closed
opened 2020-05-16 11:37:04 +02:00 by Konstantins Visnevskis · 7 comments

System Information
Operating system: Linux-4.15.0-91-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Mesa DRI Intel(R) Bay Trail Intel Open Source Technology Center 4.2 (Core Profile) Mesa 19.2.8

Blender Version
Broken: version: 2.83 (sub 16), branch: master, commit date: 2020-05-13 20:48, hash: 71298a1da9

Short description of error
In pose mode F2 renaming of a bone doesn't refresh viewport displayed bone name.

Exact steps for others to reproduce the error
rename.blend

  • F2 to rename
  • Name displayed remains the same until viewport moved.
**System Information** Operating system: Linux-4.15.0-91-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Mesa DRI Intel(R) Bay Trail Intel Open Source Technology Center 4.2 (Core Profile) Mesa 19.2.8 **Blender Version** Broken: version: 2.83 (sub 16), branch: master, commit date: 2020-05-13 20:48, hash: `71298a1da9` **Short description of error** In pose mode F2 renaming of a bone doesn't refresh viewport displayed bone name. **Exact steps for others to reproduce the error** [rename.blend](https://archive.blender.org/developer/F8538439/rename.blend) - F2 to rename - Name displayed remains the same until viewport moved.

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @AlfredTsaizer

Added subscriber: @AlfredTsaizer
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Indeed, the RNA name property of pose bones doesn't have an update callback set.
Fix is easy and I got it ready, will commit tomorrow.

Indeed, the RNA name property of pose bones doesn't have an update callback set. Fix is easy and I got it ready, will commit tomorrow.

This issue was referenced by a4b2734fe2

This issue was referenced by a4b2734fe2675fbe2aeacc813b3dcd716fe81782
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-05-18 09:51:45 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76801
No description provided.