Fix T76801: Renaming bone in pose mode doesn't redraw the viewport names

The RNA name property of pose bones did not have any update logic defined.

Same issue also applied to the channel name in animation editors.

Duplicated the update logic from (edit-)bones now, other pose bone functions do
this too...